# vcpu

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Assets/: addvar.asm  cmp.asm  hello.asm  int.asm  loop.asm  src_to_include.inc  test.asm  test_include.asm
Assets/sys/: isrtable.asm
apps/assembler/: assembler.cpp
apps/emu2/: emu2.cpp
apps/emulator/: emulator.cpp
src/: VirtualCPU.cpp  VirtualCPU.h
src/assembler/: StrUtil.cpp
src/assembler/Compiler/: CompileUnit.cpp  CompileUnit.h  CompiledUnit.cpp  CompiledUnit.h  Compiler.cpp  Compiler.h  Context.cpp  Context.h  EmitStatement.cpp  EmitStatement.h  IdentifierRelocatation.h  Identifiers.h  StmtEmitter.cpp  StmtEmitter.h
src/assembler/Lexer/: TextLexer.cpp  TextLexer.h
src/assembler/Linker/: BaseLinker.cpp  BaseLinker.h  CompiledUnit.cpp  CompiledUnit.h  DummyLinker.cpp  DummyLinker.h  ElfLinker.cpp  ElfLinker.h  RawLinker.cpp  RawLinker.h  Segment.cpp  Segment.h
src/assembler/Parser/: Parser.cpp  Parser.h
src/assembler/Preprocessor/: PreProcessor.cpp  PreProcessor.h
src/assembler/ast/: ast.cpp  ast.h  astbase.h  expressions.h  instructions.h  literals.h  statements.h
src/assembler/tests/: test_compiler.cpp  test_context.cpp  test_lexer.cpp  test_linker.cpp  test_parser.cpp  test_preprocessor.cpp  test_segment.cpp  test_stmtemitter.cpp
src/common/: DurationTimer.cpp  DurationTimer.h  HexDump.cpp  HexDump.h  StrUtil.h  UnicodeHelper.cpp  UnicodeHelper.h
src/vcpu/: BitmaskFlagOperators.h  CPUBase.cpp  CPUBase.h  CPUInstructionBase.cpp  CPUInstructionBase.h  Dispatch.cpp  Dispatch.h  InstructionDecoder.cpp  InstructionDecoder.h  InstructionDecoderBase.cpp  InstructionDecoderBase.h  InstructionSet.cpp  InstructionSet.h  InstructionSetDefBase.h  InstructionSetImpl.cpp  InstructionSetImpl.h  InstructionSetImplBase.h  Interrupt.h  MemoryUnit.cpp  MemoryUnit.h  Peripheral.h  RegisterValue.h  Ringbuffer.h  SuperScalarCPU.cpp  SuperScalarCPU.h  System.cpp  System.h  Timer.cpp  Timer.h  VirtualCPU.cpp  VirtualCPU.h
src/vcpu/InstructionSetV1/: InstructionDecoder.cpp  InstructionDecoder.h  InstructionSetDefV1.cpp  InstructionSetDefV1.h  InstructionSetV1.cpp  InstructionSetV1.h  InstructionSetV1Decoder.cpp  InstructionSetV1Decoder.h  InstructionSetV1Def.cpp  InstructionSetV1Def.h  InstructionSetV1Disasm.cpp  InstructionSetV1Disasm.h  InstructionSetV1Impl.cpp  InstructionSetV1Impl.h
src/vcpu/MemorySubSys/: BusBase.h  CPUMemCache.cpp  CPUMemCache.h  Cache.cpp  Cache.h  CacheController.cpp  CacheController.h  DataBus.cpp  DataBus.h  FlashBus.cpp  FlashBus.h  HWMappedBus.cpp  HWMappedBus.h  MemoryRegion.cpp  MemoryRegion.h  MemoryUnit.cpp  MemoryUnit.h  MesiBusBase.cpp  MesiBusBase.h  PageAllocator.cpp  PageAllocator.h  RamBus.cpp  RamBus.h  thoughts.txt
src/vcpu/MemorySubSys/Tests/: test_cache.cpp  test_memregion.cpp  test_mmu.cpp  test_mmu_new.cpp
src/vcpu/Simd/: SIMDInstructionDecoder.cpp  SIMDInstructionDecoder.h  SIMDInstructionSet.cpp  SIMDInstructionSet.h  SIMDInstructionSetDef.cpp  SIMDInstructionSetDef.h  SIMDInstructionSetImpl.cpp  SIMDInstructionSetImpl.h
src/vcpu/Simd/tests/: test_simd_decoder.cpp
src/vcpu/tests/: test_dispatch.cpp  test_exceptions.cpp  test_integration.cpp  test_interrupt.cpp  test_main.cpp  test_memlayout.cpp  test_pipeline.cpp  test_ringbuffer.cpp  test_soc.cpp  test_timer.cpp  test_vcpu.cpp
tests/: test_integration.cpp  test_interrupt.cpp  test_mmu.cpp  test_pipeline.cpp  test_timer.cpp  test_vcpu.cpp
